# NetScope

./: Cargo.toml  instructions.txt
crates/api-server/: Cargo.toml
crates/api-server/src/: app_state.rs  lib.rs  main.rs
crates/api-server/src/dto/: metrics_response.rs  mod.rs  resilience_response.rs
crates/api-server/src/extractors/: client_ip.rs  mod.rs  trace_context.rs
crates/api-server/src/middleware/: mod.rs  rate_limit.rs  request_id.rs  timeout.rs  tracing.rs
crates/api-server/src/routes/: health.rs  metrics.rs  mod.rs  resilience.rs  websocket.rs
crates/api-server/src/services/: metrics_service.rs  mod.rs  resilience_service.rs  ws_hub.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/audit-ceph/: Cargo.toml
crates/audit-ceph/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: context.rs  errors.rs  events.rs  lib.rs  ports.rs  resilience.rs
crates/ingest-kafka/: Cargo.toml
crates/ingest-kafka/src/: lib.rs
crates/metrics-engine/: Cargo.toml
crates/metrics-engine/src/: lib.rs
crates/network-probe/: Cargo.toml
crates/network-probe/src/: lib.rs
crates/observability/: Cargo.toml
crates/outbound-client/: Cargo.toml
crates/test-support/: Cargo.toml
docs/: 01-methodologie.md  02-topologie-flux.md  03-modelisation-donnees.md  04-plan-validation.md  05-backlog-implementation.md  06-runbook-mvp.md  07-architecture-workspace-rust.md  08-observability-slo-alerting.md  09-api-ws-contracts.md  README.md
docs/adr/: ADR-0001-ceph-first-audit-storage.md  ADR-0002-resilience-policies-outbound.md  ADR-0003-metrics-model-and-cardinality.md  ADR-0004-websocket-realtime-delivery-policy.md  README.md
(+3 files in other folders)
