[workspace]
members = [
    "crates/app",
    "crates/ingest-kafka",
    "crates/outbound-client",
    "crates/network-probe",
    "crates/metrics-engine",
    "crates/audit-ceph",
    "crates/api-server",
    "crates/domain",
    "crates/config",
    "crates/observability",
    "crates/test-support",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["NetScope Team"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
