[package]
name = "api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
config = { path = "../config" }
domain = { path = "../domain" }
metrics-engine = { path = "../metrics-engine" }
