[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
api-server = { path = "../api-server" }
config = { path = "../config" }
observability = { path = "../observability" }
